--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Akhil07-ctrl.github.io/Nxt-Watch/",
+  "homepage": "https://Akhil07-ctrl.github.io/Youtube-Clone/",
   "name": "client",
   "private": true,
   "version": "0.0.0",
